# databot

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  publish.yml  release.yml
databot/: __init__.py
databot/agents/: __init__.py
databot/channels/: base.py  cli_channel.py  discord.py  gchat.py  slack.py  telegram.py  whatsapp.py
databot/cli/: commands.py
databot/config/: defaults.yaml  schema.py
databot/connectors/: __init__.py  base.py  catalog_connector.py  factory.py  kafka_connector.py  registry.py  rest_connector.py  spark_connector.py  sql_connector.py
databot/core/: bus.py  context.py  loop.py
databot/cron/: service.py  store.py
databot/mcp/: __init__.py
databot/memory/: manager.py
databot/middleware/: __init__.py  auth.py  rate_limit.py
databot/observability/: __init__.py
databot/plugins/: __init__.py  loader.py
databot/providers/: base.py  litellm_provider.py
databot/rag/: __init__.py
databot/session/: manager.py  store.py
databot/skills/: __init__.py
databot/tools/: airflow.py  base.py  catalog.py  cron.py  data_quality.py  filesystem.py  kafka.py  lineage.py  shell.py  spark.py  sql.py  web.py
databot/ui/: __init__.py
databot/ui/static/: index.html
docs/: system_design.md
examples/example_plugin/: README.md  pyproject.toml  tools.py
k8s/: 01-secret.yml  02-configmap.yml  03-deployment.yml  04-service.yml
tests/: test_agents.py  test_channels.py  test_config.py  test_connectors.py  test_context.py  test_data_quality.py  test_gateway_cron_channels.py  test_integration_wiring.py  test_loop.py  test_middleware.py  test_observability.py  test_plugins.py  test_providers_config.py  test_rag.py  test_session_memory.py  test_skills.py  test_sql.py  test_streaming.py  test_tools.py  test_web.py
ui/: README.md  next.config.ts  package-lock.json  package.json
ui/src/app/: globals.css  layout.tsx  page.tsx
ui/src/app/connectors/: page.tsx
ui/src/app/sessions/: page.tsx
ui/src/app/settings/: page.tsx
ui/src/app/status/: page.tsx
ui/src/app/tools/: page.tsx
ui/src/components/: chat-input.tsx  chat-message.tsx  sidebar.tsx
ui/src/lib/: api.ts  utils.ts
