[project]
name = "databot-example-plugin"
version = "0.1.0"
description = "Example plugin demonstrating how to create custom tools for databot"
requires-python = ">=3.11"
dependencies = ["databot-ai"]

[project.entry-points."databot.tools"]
hello_world = "example_plugin.tools:HelloWorldTool"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
